package message;

// GameType - game type
enum GameType {
  Texas = 0;
  Omaha = 1;
  Omaha8 = 2;
  Stud = 3;
  Stud8 = 4;
  Razz = 9;
  London = 10;
  FiveCard = 11;
  Single27 = 12;
  Triple27 = 13;
  Badugi = 14;
}

// GameLimit - game limit
enum GameLimit {
  NoLimit = 0;
  PotLimit = 1;
  FixedLimit = 2;
}

// SeatState - seat state
enum SeatState {
  Empty = 0;
  Reserved = 1;
  Ready = 2;

  WaitingBigBlind = 3;
  PostingBigBlind = 4;

  Playing = 5;
  Betting = 6;
  Allin = 7;
  Folded = 8;
  Autoplay = 9;

  OutOfStack = 10;
  OutOfTournament = 11;

  NotPlaying = 12;
  Disconnected = 13;
}

// Seat - seat info
message Seat {
  //required int32 Pos = 1;
  optional SeatState State = 2;
  optional double Stack = 3;
  optional double Bet = 4;
}

// Table - table info
message Table {
  //required string Id = 1;
  required int32 Size = 2;
  required int32 Button = 3;
  repeated Seat Seats = 4;
}

// Game - game info
message Game {
  required GameType Type = 1;
  required GameLimit Limit = 2;
  required int32 TableSize = 3;
}

// Stake - stake info
message Stake {
  required double BigBlind = 1;
  optional double SmallBlind = 2;
  optional double Ante = 3;
  optional double BringIn = 4;
}

// Deal - deal info
message Deal {
  required double Pot = 1;
  repeated int32 Board = 2;
}

// Play - play info
message Play {
  required Game Game = 1;
  required Table Table = 2;
  required Stake Stake = 3;
//  optional Deal Deal = 4;
}

// PlayStart - notify play start
message PlayStart {
  optional Play Play = 1;
}

// PlayStop - notify play stop
message PlayStop {
  optional Play Play = 1;
}

// StreetStart - notify street start
message StreetStart {
  required string Name = 1;
}
